--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h2>My First Subheading</h2>
 
 <p>My first paragraph.</p>
-
+<figure>66666.</figure>
+<address>peabody terrace</address>
 </body>
 </html>
