add navigation links to website

--- a/goodbye.html
+++ b/goodbye.html
@@ -6,6 +6,9 @@
 <h2>Adios</h2>
 
 <p> What a short website </p>
+<a href="goodbye.html"> 
+Next Page </a>
+<a href="index.html"> Home Page </a>
 
 </body>
 </html>
