add navigation links to website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <p>My first paragraph.</p>
 <figure>66666.</figure>
 <address>peabody terrace</address>
+<a href="goodbye.html"> 
+Next Page </a>
 </body>
 </html>
