add navigation links to website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <h2>My First Subheading</h2>
 
 <p>My first paragraph.</p>
+<ul> 
+	<li> Executive Branch </li>
+	<li> Legislative Branch </li>
+	<li> Judicial Branch </li>
+</ul>
 <figure>66666.</figure>
 <address>peabody terrace</address>
 <a href="goodbye.html"> 
